--- a/.env
+++ b/.env
@@ -6,7 +6,7 @@
 
 
 
-DATABASE_URL=postgresql+psycopg2://melcombe:fame007dav@host.docker.internal:5432/sia
+DATABASE_URL=postgresql+psycopg2://melcombe:fame007dav@localhost:5432/sia
 GOOGLE_API_KEY=your_actual_google_api_key
 CLOCKIN_RADIUS_METERS=100
 
